changed container class into an id

--- a/main.css
+++ b/main.css
@@ -13,10 +13,12 @@ body {
 }
 
 /*container*/
-.container {
+#container {
   background: #eee;
   margin: 0;
   padding: 0;
+  height: 100%;
+  width: 100%;
 }
 
 /*header*/
