--- a/new/_includes/nav.html
+++ b/new/_includes/nav.html
@@ -2,7 +2,7 @@
   <h1><a href="https://github.com/planeswalker1">Daniel Munoz</a></h1>
 
   <ul id="nav" class="nav">
-    <li><a href="{{site.baseurl}}/">Projects</a></li>
+    <li><a href="{{site.baseurl}}/">{{page.listTitle}}</a></li>
     <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
   </ul>
 
@@ -11,9 +11,9 @@
 
 <div id="responsive" class="responsive">
   <p class="responsive-open">Close X</p>
-  
+
   <ul class="nav">
-    <li><a href="{{site.baseurl}}/">Projects</a></li>
+    <li><a href="{{site.baseurl}}/">{{page.listTitle}}</a></li>
     <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
   </ul>
 </div>
