--- a/new/_includes/footer.html
+++ b/new/_includes/footer.html
@@ -1,18 +1,19 @@
 <footer>
-  <div id="contact" class="wrapper">
+  <div class="footer">
     <div>
-      <h3>About Me</h3>
+      <h2>About Me</h2>
       <p>I am a freelancer based in California</p>
       <p>I focus on web development</p>
       <p><a href="https://github.com/planeswalker1">Github</a></p>
     </div>
 
     <div>
-      <h3>Contact Me</h3>
-      <p>If you want to implement a project tell me</p>
-      <p>I will craft the best solution</p>
-      <p>daniel.munozdev@gmail.com</p>
+      <h2>Contact Me</h2>
+      <p>If you want help with a project, contact me</p>
+      <p>I will help find the best solution</p>
+      <p><a href="{{site.baseurl}}/contact/">daniel.munozdev@gmail.com</a></p>
     </div>
+
   </div>
   <div class="copy">
     <p>&copy; Daniel Munoz</p>
