--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,8 +2,8 @@
   <h1><a href="https://github.com/planeswalker1">Daniel Munoz</a></h1>
 
   <ul id="nav" class="nav">
-    <li><a href="{{site.baseurl}}/">{{page.listTitle}}</a></li>
-    <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
+    <li><a href="{{site.baseurl}}">{{page.listTitle}}</a></li>
+    <li><a href="{{site.baseurl}}contact/">Contact</a></li>
   </ul>
 
   <p id="show" class="responsive-open show">MENU</p>
@@ -13,7 +13,7 @@
   <p class="responsive-open">Close X</p>
 
   <ul class="nav">
-    <li><a href="{{site.baseurl}}/">{{page.listTitle}}</a></li>
-    <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
+    <li><a href="{{site.baseurl}}">{{page.listTitle}}</a></li>
+    <li><a href="{{site.baseurl}}contact/">Contact</a></li>
   </ul>
 </div>
