--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Daniel Munoz</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="{{site.baseurl}}main.css">
+  <link rel="icon" href="{{site.baseurl}}images/favicon.png">
+  <script src="{{site.baseurl}}main.js" defer></script>
 </head>
 <body>
   {{content}}
