Fix links and remove permalink pretty from config file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Daniel Munoz</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="{{site.baseurl}}main.css">
+  <link rel="stylesheet" href="{{site.baseurl}}styles.css">
   <link rel="icon" href="{{site.baseurl}}images/favicon.png">
-  <script src="{{site.baseurl}}main.js" defer></script>
+  <script src="{{site.baseurl}}script.js" defer></script>
 </head>
 <body>
   {{content}}
+  {% include footer.html %}
 </body>
 </html>
