--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <h2>About Me</h2>
       <p>I am a freelancer based in California</p>
       <p>I focus on web development</p>
-      <p><a href="https://github.com/planeswalker1">Github</a></p>
+      <p>My <a href="https://github.com/planeswalker1">Github</a></p>
     </div>
 
     <div>
