--- a/_includes/css/skills.css
+++ b/_includes/css/skills.css
@@ -1,7 +1,7 @@
 main h1 {
   line-height: 50px;
   background-color: #000;
-  color: white;
+  color: #fff;
   text-align: center;
   margin: 0;
   height: 50px;
@@ -18,7 +18,7 @@ main h1 {
 }
 
 ul.tools {
-  background: linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)), url(../../images/old.png);
+  background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .3)), url(../../images/old.png);
   background-attachment: fixed;
   justify-content: space-around;
   min-height: 400px;
