--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,12 +1,13 @@
 <nav>
-  <h1><a href="https://github.com/planeswalker1">Daniel Munoz</a></h1>
+  <h1><a href="https://github.com/planeswalker1">D<span>aniel Muno</span>z</a></h1>
 
   <ul id="nav" class="nav">
     <li><a href="{{site.baseurl}}index.html">{{page.listTitle}}</a></li>
     <li><a href="{{site.baseurl}}contact.html">Contact</a></li>
+    <li><a href="https://planeswalker1.github.io/resume/">Resume</a></li>
   </ul>
 
-  <p id="show" class="responsive-open show">MENU</p>
+  <p id="show" class="responsive-open show"><span>MENU</span></p>
 </nav>
 
 <div id="responsive" class="responsive">
@@ -15,5 +16,6 @@
   <ul class="nav">
     <li><a href="{{site.baseurl}}index.html">{{page.listTitle}}</a></li>
     <li><a href="{{site.baseurl}}contact.html">Contact</a></li>
+    <li><a href="https://planeswalker1.github.io/resume/">Resume</a></li>
   </ul>
 </div>
