Add border to links in the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,14 +4,14 @@
       <h2>About Me</h2>
       <p>I am a freelancer based in California</p>
       <p>I focus on web development</p>
-      <p>My <a href="https://github.com/planeswalker1">Github</a></p>
+      <p>My <a href="https://github.com/planeswalker1"><span>Github</span></a></p>
     </div>
 
     <div>
       <h2>Contact Me</h2>
       <p>If you want help with a project, contact me</p>
       <p>I will help find the best solution</p>
-      <p><a href="{{site.baseurl}}contact.html">daniel.munozdev@gmail.com</a></p>
+      <p><a href="{{site.baseurl}}contact.html"><span>daniel.munozdev@gmail.com</span></a></p>
     </div>
 
   </div>
