--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,8 +2,20 @@
   <h1><a href="https://github.com/planeswalker1">D<span>aniel Muno</span>z</a></h1>
 
   <ul id="nav" class="nav">
-    <li><a href="{{site.baseurl}}index.html">{{page.listTitle}}</a></li>
-    <li><a href="{{site.baseurl}}contact.html">Contact</a></li>
+    <li>
+      {% if page.link == '/' %}
+        <span class="nav__span">Project</span>
+      {% else %}
+        <a href="{{site.baseurl}}index.html">{{page.title}}</a>
+      {% endif %}
+    </li>
+    <li>
+      {% if page.link == '/contact.html'%}
+        <span class="nav__span">contact</span>
+      {% else %}
+      <a href="{{site.baseurl}}contact.html">Contact</a>
+      {% endif %}
+    </li>
     <li><a href="https://planeswalker1.github.io/resume/">Resume</a></li>
   </ul>
 
