update nav, css, and titles, compress images, and add sitemap.xml

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
       <h2>Contact Me</h2>
       <p>If you want help with a project, contact me</p>
       <p>I will help find the best solution</p>
-      <p><a href="{{site.baseurl}}contact.html"><span>daniel.munozdev@gmail.com</span></a></p>
+      <p><a href="/contact/"><span>daniel.munozdev@gmail.com</span></a></p>
     </div>
 
   </div>
