--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,5 @@
 body {
-  /*background: #eee;*/
-  background-color: whitesmoke;
+  background-color: #f5f5f5;
   box-sizing: border-box;
   font-family: 'Roboto Slab', serif;
   height: 100%;
