--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,34 +2,8 @@
   <h1><a href="https://github.com/planeswalker1">D<span>aniel Muno</span>z</a></h1>
 
   <ul id="nav" class="nav">
-    {% for link in site.data.links %}
-      <li>
-        {% if page.link == link.site %}
-          <span class="nav__span">{{link.title}}</span>
-        {% else %}
-          <a href="{{site.baseurl}}{{link.site}}">{{link.title}}</a>
-        {% endif %}
-      </li>
-    {% endfor %}
-    <li><a href="https://planeswalker1.github.io/resume/">Resume</a></li>
+    {% include links.html span-class="nav__span" %}
   </ul>
 
   <p id="show" class="responsive-open show"><span>MENU</span></p>
 </nav>
-
-<div id="responsive" class="responsive">
-  <p class="responsive-open">Close X</p>
-
-  <ul class="nav">
-    {% for link in site.data.links %}
-      <li>
-        {% if page.link == link.site %}
-          <span class="nav__span--responsive">{{link.title}}</span>
-        {% else %}
-          <a href="{{site.baseurl}}{{link.site}}">{{link.title}}</a>
-        {% endif %}
-      </li>
-    {% endfor %}
-    <li><a href="https://planeswalker1.github.io/resume/">Resume</a></li>
-  </ul>
-</div>
