--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Daniel Munoz</title>
+  <meta name="theme-color" content="#45db59">
+  <title>{% if page.title %}{{ page.title }} · {% endif %}Daniel Munoz{% if page.title-after %} · {{ page.title-after }}{% endif %}</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="{{site.baseurl}}styles.css">
-  <link rel="icon" href="{{site.baseurl}}images/favicon.png">
-  <script src="{{site.baseurl}}script.js" defer></script>
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="icon" href="/images/favicon.png">
+  <script src="/js/jquery-3.3.1.min.js"></script>
+  <script src="/js/script.js" defer></script>
 </head>
 <body>
-  {{content}}
-  {% include footer.html %}
+  <div class="container">
+    {{content}}
+    {% include footer.html %}
+  </div>
 </body>
 </html>
