add meta tags, and update README

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#45db59">
+  <meta property="og:title" content="{{ site.title }}">
+  <meta property="og:type" content="website">
+  <meta name="description" content="{{ page.meta }}">
   <title>{% if page.title %}{{ page.title }} · {% endif %}Daniel Munoz</title>
   <link rel="icon" href="favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
