Update meta tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#222222">
   <meta name="description" content="{{ page.meta }}">
-
   <meta property="og:title" content="{{ page.title }}">
   <meta property="og:type" content="website">
   <meta property="og:description" content="{{ page.meta }}">
