--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,9 +34,9 @@
     <footer>
       <nav>
         <ul class="nav__list--footer">
-          <li class="nav__item--footer"><a class="nav__link--footer" href="{{ site.baseurl }}/blog">Blog</a></li>
-          <li class="nav__item--footer"><a class="nav__link--footer" href="{{ site.baseurl }}/contact">Contact</a></li>
-          <li class="nav__item--footer"><a class="nav__link--footer" href="https://github.com/planeswalker1">Github</a></li>
+          <li class="nav__item--footer"><a class="link nav__link--footer" href="{{ site.baseurl }}/blog">Blog</a></li>
+          <li class="nav__item--footer"><a class="link nav__link--footer" href="{{ site.baseurl }}/contact">Contact</a></li>
+          <li class="nav__item--footer"><a class="link nav__link--footer" href="https://github.com/planeswalker1">Github</a></li>
         </ul>
       </nav>
     </footer>
