--- a/css/module.css
+++ b/css/module.css
@@ -14,7 +14,7 @@
 .active {
   background-color: white;
   border-radius: 10px;
-  padding: 10px 15px;
+  padding: 10px 20px;
 }
 
 .active--link {
@@ -111,7 +111,29 @@
 .blog__meta {
   width: 80%;
 }
+/* table styles */
+table {
+  border-spacing: 0;
+}
 
+tr {
+  background-color: #fff;
+  border-top: 1px solid #c6cbd1;
+}
+
+tr:nth-of-type(even) {
+  background-color: #f6f8fa;
+}
+
+th,
+td {
+  border: 1px solid #dfe2e5;
+  padding: 6px 13px;
+}
+
+th {
+  text-align: left;
+}
 /* archive styles */
 .archive {
     border: solid 1px #ddd;
