--- a/css/layout.css
+++ b/css/layout.css
@@ -122,13 +122,21 @@
 }
 
 /* media screen styles */
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1200px) {
+  .grid--portfolio {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 1060px) {
   /* grid styles */
   .grid--portfolio {
-    grid-template-columns: 300px;
+    grid-template-columns: repeat(2, 300px);
     grid-template-rows: repeat(3, 400px);
   }
+}
 
+@media screen and (max-width: 960px) {
   /* main styles */
   .main__container--med {
     width: 80%;
@@ -166,6 +174,14 @@
   }
 }
 
+@media screen and (max-width: 650px) {
+  /* grid styles */
+  .grid--portfolio {
+    grid-template-columns: repeat(1, 300px);
+    grid-template-rows: repeat(6, 400px);
+  }
+}
+
 @media screen and (max-width: 500px) {
   /* header styles */
   .header__nav {
@@ -196,11 +212,6 @@
   .main__container--blog {
     margin: 0;
     width: 100%;
-  }
-
-  /* grid styles */
-  .grid--portfolio {
-    justify-content: center;
   }
 
   /* blog styles */
