update images' sizes and README

--- a/css/module.css
+++ b/css/module.css
@@ -73,6 +73,12 @@
  width: 100%;
 }
 
+.img--paginate {
+  height: 100px;
+  object-fit: cover;
+  width: 80%;
+}
+
 .btn-container {
   margin: 30px 30px 30px 0;
 }
@@ -96,10 +102,6 @@
 .btn:hover {
   background-color: #555;
   top: 1px;
-}
-
-.img--paginate {
-  height: 100px;
 }
 
 .post__list {
