--- a/css/layout.css
+++ b/css/layout.css
@@ -174,6 +174,13 @@
   }
 }
 
+@media only screen and (max-width: 960px) {
+  .img--post {
+    object-fit: cover;
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 650px) {
   /* grid styles */
   .grid--portfolio {
