--- a/css/module.css
+++ b/css/module.css
@@ -66,7 +66,7 @@
 
 /* blog styles */
 .img--post {
- height: 200px;
+ width: 300px;
 }
 
 .img--blog {
@@ -315,7 +315,7 @@ p > img {
 }
 
 .m {
-  color: #75e75b;
+  color: #ffee80;
 }
 /*
 Yellow: #ffc600
