--- a/css/layout.css
+++ b/css/layout.css
@@ -2,7 +2,6 @@
 .container {
   display: flex;
   flex-direction: column;
-
   margin: 0 auto;
   max-width: 1360px;
   min-height: 100vh;
@@ -68,6 +67,12 @@
 
 .paginate {
   display: flex;
+  flex-direction: column;
+}
+
+.img--paginate {
+  object-fit: cover;
+  width: 100%;
 }
 
 .paginate__prev {
@@ -126,6 +131,10 @@
   .grid--portfolio {
     justify-content: center;
   }
+
+  .highlight {
+    overflow: scroll;
+  }
 }
 
 @media screen and (max-width: 1060px) {
@@ -154,11 +163,6 @@
     width: 100%;
   }
 
-  .img--paginate {
-    object-fit: cover;
-    width: 100%;
-  }
-
   .blog__meta {
     width: 100%;
   }
@@ -167,10 +171,6 @@
     height: unset;
     order: 1;
     width: 100%;
-  }
-
-  .paginate {
-    flex-direction: column;
   }
 }
 
