--- a/css/module.css
+++ b/css/module.css
@@ -145,7 +145,7 @@ th {
     border: solid 1px #ddd;
     border-radius: 3px;
     width: 40%;
-    height: 500px;
+    height: 100%;
     padding: 30px;
 }
 
